fix text too long issue on description-block.component

--- a/src/app/coin-data/description-block/description-block.component.css
+++ b/src/app/coin-data/description-block/description-block.component.css
@@ -41,3 +41,19 @@
     border-top: hidden;
   }
 }
+
+td {
+  max-width: 100px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+table {
+  width: 100%;
+}
+/* td {
+  max-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+} */
